crates/formatter/tests/snapshots/snapshots__coder__migrations__000352_default_dynamic_templates.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates alter column use_classic_parameter_flow set default true;
