crates/formatter/tests/snapshots/snapshots__coder__migrations__000354_workspace_acl.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view workspaces_expanded;

alter table workspaces
	add column group_acl jsonb not null default '{}'::jsonb,
	add column user_acl jsonb not null default '{}'::jsonb;

-- Recreate the view, now including the new columns
create view workspaces_expanded as
select
	workspaces.id,
	workspaces.created_at,
	workspaces.updated_at,
	workspaces.owner_id,
	workspaces.organization_id,
	workspaces.template_id,
	workspaces.deleted,
	workspaces.name,
	workspaces.autostart_schedule,
	workspaces.ttl,
	workspaces.last_used_at,
	workspaces.dormant_at,
	workspaces.deleting_at,
	workspaces.automatic_updates,
	workspaces.favorite,
	workspaces.next_start_at,
	workspaces.group_acl,
	workspaces.user_acl,
	visible_users.avatar_url as owner_avatar_url,
	visible_users.username as owner_username,
	visible_users.name as owner_name,
	organizations.name as organization_name,
	organizations.display_name as organization_display_name,
	organizations.icon as organization_icon,
	organizations.description as organization_description,
	templates.name as template_name,
	templates.display_name as template_display_name,
	templates.icon as template_icon,
	templates.description as template_description
from (
	(
		(
			workspaces
				join visible_users on ((workspaces.owner_id = visible_users.id))
		)
			join organizations on ((workspaces.organization_id = organizations.id))
	)
		join templates on ((workspaces.template_id = templates.id))
);

comment on view workspaces_expanded is 'Joins in the display name information such as username, avatar, and organization name.';
