crates/formatter/tests/snapshots/snapshots__coder__migrations__000355_add_provisioner_logs_overflowed.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_jobs drop column logs_length;
alter table provisioner_jobs drop column logs_overflowed;
