crates/formatter/tests/snapshots/snapshots__coder__migrations__000355_add_provisioner_logs_overflowed.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add logs length tracking and overflow flag, similar to workspace agents
alter table provisioner_jobs
	add column logs_length integer not null default 0
		constraint max_provisioner_logs_length check (logs_length <= 1048576);
alter table provisioner_jobs
	add column logs_overflowed boolean not null default false;

comment on column provisioner_jobs.logs_length is 'Total length of provisioner logs';
comment on column provisioner_jobs.logs_overflowed is 'Whether the provisioner logs overflowed in length';
