crates/formatter/tests/snapshots/snapshots__coder__migrations__000356_enforce_deadline_below_max_deadline.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_builds
	drop constraint workspace_builds_deadline_below_max_deadline;
