crates/formatter/tests/snapshots/snapshots__coder__migrations__000357_add_user_secrets.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop the unique indexes first (in reverse order of creation)
drop index if exists user_secrets_user_file_path_idx;
drop index if exists user_secrets_user_env_name_idx;
drop index if exists user_secrets_user_name_idx;

-- Drop the table
drop table if exists user_secrets;
